--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@
                             <li>
                                 <a href="https://dexscreener.com/solana/2tdrfvhwalfum5tvbnn7o6b9cbuzdurmycvidncx9oah" target="_blank" class="footer__link">Jork on DexScreener</a>
                             </li>
+			<li>
+                                <a href="https://www.dextools.io/app/en/solana/pair-explorer/2TdrfVHWALfum5tvbnn7o6b9CBUzduRmYcviDNcX9oAH?t=1732362199756" target="_blank" class="footer__link">Jork on DexTools</a>
+                            </li>
                             <li>
                                 <a href="https://jup.ag/swap/SOL-7ty3ruNJebb8RYmzfpUommJnZnCwaoB8RNfqpjLMpump" target="_blank" class="footer__link">Swap</a>
                             </li>
