--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                 <a href="#about" class="footer__link">About $JORKIN</a>
                             </li>
                             <li>
-                                <a href="#bounceeenomics" class="footer__link">Bounceeenomics</a>
+                                <a href="#bounceeenomics" class="footer__link">Jorkennomics</a>
                             </li>
                             <li>
                                 <a href="#howtobuy" class="footer__link">Meme</a>
