--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             
                             Stop fumbling and start Jorkin. 
                         </p>
-                        <a href="https://x.com/jorkinonsol" target="_blank" class="button">Follow us on Twitter</a>
+                        <a href="https://x.com/jorkinonsolana" target="_blank" class="button">Follow us on Twitter</a>
                     </div>
 
                     <img src="assets/img/roadmap.jpeg" alt="" class="about__img">
@@ -345,7 +345,7 @@
                                 <i class='bx bxl-telegram'></i>
                             </a>
                             
-                            <a href="https://x.com/jorkinonsol" target="_blank" class="footer__social-link">
+                            <a href="https://x.com/jorkinonsolana" target="_blank" class="footer__social-link">
                                 <i class='bx bxl-twitter' ></i>
                             </a>
                         </div>
