--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                             
                             Stop fumbling and start Jorkin. 
                         </p>
-                        <a href="https://x.com/jorkinonsolana" target="_blank" class="button">Follow us on Twitter</a>
+                        <a href="https://x.com/jorkinonsolana" target="_blank" class="button">Follow us on X</a>
+			    <a href="https://x.com/thejorkinator" target="_blank" class="button">AI agent on X</a>
                     </div>
 
                     <img src="assets/img/roadmap.jpeg" alt="" class="about__img">
